--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "access": "public"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "chalk": "4.1.2",
     "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "fs-extra": "^11.2.0",
     "inquirer": "^12.0.0",
     "minimist": "^1.2.8",
     "ora": "5.4.1"
