--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "fs-extra": "^11.2.0",
     "inquirer": "^12.0.0",
     "minimist": "^1.2.8",
-    "ora": "5.4.1"
+    "ora": "5.4.1",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
