--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "lint": "eslint --ext .js --cache bin src",
-    "lint-fix": "eslint --ext .js --fix --cache bin src"
+    "lint-fix": "eslint --ext .js --fix --cache bin src",
+    "release": "release-it"
   },
   "keywords": [
     "cli",
@@ -35,9 +36,11 @@
     "rimraf": "^5.0.10"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1"
+    "eslint-plugin-prettier": "^5.2.1",
+    "release-it": "^18.1.2"
   }
 }
