--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Create Release
 
 on:
-  workflow_dispatch:  # 允许手动触发工作流
+  workflow_dispatch:
 
 jobs:
   release:
@@ -14,13 +14,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'  # 或者你项目使用的其他版本
+          node-version: 18
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.0.0
+        with:
+          version: 9.4.0
 
       - name: Install dependencies
-        run: pnpm install  # 使用 pnpm 安装依赖
+        run: pnpm install --frozen-lockfile
 
       - name: Run release-it
-        run: pnpm run release-ci  # 执行 release-it
+        run: pnpm run release-ci
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}  # 确保在 GitHub Secrets 中设置了 NPM_TOKEN
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 确保在 GitHub Secrets 中设置了 GITHUB_TOKEN
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
