--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "access": "public"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.8.2",
     "chalk": "4.1.2",
     "commander": "^12.1.0",
+    "decompress": "^4.2.1",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "inquirer": "^12.0.0",
     "minimist": "^1.2.8",
+    "mustache": "^4.2.0",
     "ora": "5.4.1",
     "rimraf": "^5.0.10"
   },
